Version 1.3.X
-------------
* Fix bug where snapintasks if generated after main tasking and before that
tasking is created, get closed and not properly closing the actual deployed
task.
* Fix proxy information to NOT proxy storage node internalized Storage Node
information.
* Fix multicast issues for all relevant systems. Thank you Curtis.
* Fix snapins operate only if the host has snapins.
* Move clamav off of server to static binaries.  Bumps size of installer
folder from 80MB to 277MB.  However clamav is not loaded in the initrd file
and this same clamav can operate on the fog server.
* Add installer files from David Fear to fog to allow FOG Installation on
Arch Linux.
* Add partition imaging selection options into GUI and fog to operate within.
* Add ipxe support for Apple EFI and better generalized EFI support.  Special
thanks to Michael Brown, the iPXE team, and Curtis Larsen for taking the time
to debug and correct and make this work.
* Add support for Apple Mac OS support in our systems.
* Add initial support for torrent casting.  Only works for resizable.
* Adjust bootmenu to store to variables.  This can then allow hooks to
interact with the boot menu setup for customizations as needed.
* Adjust the menu items to go into database to allow adding own custom
options that stay even if updated.
* Add ability to customize iPXE Menu items besides our main defaults. May
think about allowing editing but for now well just try the adding custom
entries.  The first twelve items are only editable to be adjusted by default
item or what menu they display in.
* Inject the Boot Items into HookManager by means of array push.  This should
allow the items to be edited using variables for each menu item as a hook to
the event of: BOOT_ITEMS_<titlename>  Replacing titlename to stuff like:
fog_local or fog_advanced.  The period is replaced with an _ to ensure
compatibility.
* Change names of PXE Menu stuff to iPXE stuff.

Version 1.2.0
-------------